# OpenSoft-2014

./: CMakeCache.txt  Contributors.md  README.md  Team No 10.pptx  opensoft
src/: CMakeLists.txt  Makefile  backendOpensoft.cpp  backendOpensoft.hpp  cmake_install.cmake  edgeFeatures.hpp  findBestMatch.hpp  opensoft.cpp  translateImage.hpp
src/GUI/nbproject/: project.properties
src/GUI/nbproject/private/: private.properties
src/GUI/src/: All.form  All.java
